force-app/main/default/objects/Loan__c/fields/Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type__c</fullName>
    <description>Which kind of account the loan payments draw from: Operating, Escrow, Reserve or Other. THIS IS AN ACCOUNT TYPE, NOT AN ACCOUNT NUMBER, and it does not violate the standing rule that no bank account or routing numbers are stored anywhere in this application. It is a four-value classification the loan checklist group needs in order to route the auto-payment setup. Recorded here explicitly so a later security pass does not remove a safe field on a misreading of its name.</description>
    <inlineHelpText>Type of account the loan payments draw from. Never record an account or routing number anywhere in Salesforce.</inlineHelpText>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>