force-app/main/default/objects/Loan__c/fields/Interest_Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Pct__c</fullName>
    <description>Annual interest rate. Percent type with three decimals so a rate quoted in basis points survives without rounding. The _Pct__c suffix follows the type-suffix discipline for a Number whose name would otherwise read categorical, and it makes clear at the call site that the stored value is a percentage rather than a decimal fraction.</description>
    <inlineHelpText>Annual interest rate as a percentage, for example 6.375 for six and three eighths percent.</inlineHelpText>
    <label>Interest Rate %</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>