force-app/main/default/objects/Loan__c/fields/Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name__c</fullName>
    <description>Name of the lending institution, as free text. NAMED Lender_Name__c AND NOT Lender__c ON PURPOSE: this repo naming convention reserves an object-shaped field name for a lookup to that object, and no Lender__c object exists, so a Text field called Lender__c would be camouflaged as a relationship by the convention itself. Direct precedent: Vendor_Contract__c.Provider_Name__c. If the business later wants the lender to be an Account, that is an additive change plus a backfill, not a rename.</description>
    <inlineHelpText>Name of the bank or lender providing the loan.</inlineHelpText>
    <label>Lender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>