force-app/main/default/objects/Loan__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Total principal of the loan. Suffixed Amount because the naming convention requires a currency field name to make its unit unambiguous - a bare Loan__c or Principal__c would not say whether it is a total, a rate or a periodic payment.</description>
    <inlineHelpText>Total loan principal in the deal currency.</inlineHelpText>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>