force-app/main/default/objects/Loan__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <description>Loan term in months. The unit is in the name, as the naming convention requires - a bare Term__c would be ambiguous between months and years and the two differ by a factor of twelve in every downstream calculation.</description>
    <inlineHelpText>Length of the loan in months, for example 120 for a ten year term.</inlineHelpText>
    <label>Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>